--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,7 +1,17 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/leanprover-community/mathlib4",
+ [{"url": "https://github.com/marcusrossel/lean-egg",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "5d6c4fedf513668335c0e29c57114f9b1e4dbdaa",
+   "name": "egg",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/mathlib4",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
@@ -11,6 +21,16 @@
    "inputRev": "master",
    "inherited": false,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/nomeata/lean-calcify",
+   "type": "git",
+   "subDir": null,
+   "scope": "nomeata",
+   "rev": "b89b823f26eb35a1d9ed57af2663128d6b3a35c2",
+   "name": "calcify",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "master",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
    "subDir": null,
